# investment_strategist

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  README.md  app.py  config.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
api/: __init__.py  routes.py
data/: __init__.py  data_loader.py  database.py  models.py  queries.py
etl/: __init__.py
etl/downloaders/: __init__.py  base_downloader.py  moex_downloader.py  yahoo_downloader.py
etl/pipeline/: __init__.py  currency_normalizer.py  master_pipeline.py
etl/transformers/: __init__.py  base_transformer.py  standardize_moex.py  standardize_yahoo.py
etl/utils/: __init__.py  calendar_utils.py
models/: __init__.py  asset.py  strategy.py
scripts/: __init__.py  check_env.py  repair_env.py  run_tests.py
services/: __init__.py  simulation_service.py
simulation/: __init__.py  portfolio_calculator.py  return_calculator.py  rolling_returns.py  scenario_analysis.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: __init__.py
tests/test_api/: __init__.py  test_routes.py
tests/test_etl/: __init__.py  test_downloaders.py
tests/test_simulation/: __init__.py  test_return_calculator.py
utils/: __init__.py  date_utils.py
